feat: add release job to CI workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,13 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
 
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
